# sentinela

./: .dockerignore  .env.example  .env.railway  .env.railway.neon  .gitignore  Dockerfile  FINAL_SUMMARY.md  Procfile  README.md  REPORTS_README.md  add_certidoes_alerts.sh  add_charts_dashboard_gestor.sh  add_critical_risks_table.sh  celery_pids.txt  celerybeat-schedule  commit_output.txt  corrigir-tudo.sh  create_admin.py  create_auth_context.sh  create_dashboard_gestor.sh  create_fornecedores_page.sh  create_login_page.sh  create_login_with_hookform.sh  create_pages_folder.sh  create_test_user.py  create_tests_structure.sh  create_vite_tailwind_configs.sh  docker-compose.dev.yml  docker-compose.yml  docker-stop.sh  executartests.sh  final_push_and_deploy.sh  fix-and-test.sh  fix_api_service.sh  fix_backend_structure.sh  fix_backend_tests_imports.sh  fix_entidade_status_import.sh  fix_failing_tests.sh  fix_tailwind_postcss.sh  healthcheck.py  (+32 more)
sentinela-py/: celery_worker.py  pyproject.toml  requirements.txt
sentinela-py/app/: config.py  main.py
sentinela-py/app/api/v1/: __init__.py  auth.py  contratos.py  entidades.py  fornecedores.py  pncp.py
sentinela-py/app/core/: __init__.py  config.py  dependencies.py  security.py
sentinela-py/app/crud/: __init__.py  base.py
sentinela-py/app/models/: __init__.py  all_models.py
sentinela-py/app/schemas/: __init__.py  pydantic_models.py
sentinela-py/app/tasks/: __init__.py  celery_app.py
sentinela-py/app/utils/: __init__.py  audit.py
sentinela-py/scripts/: backup_s3.py
sentinela-py/tests/: __init__.py  conftest.py
(+206 files in other folders)
